// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitWheel Component renders a full circle with all successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#ffffff"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            517.394917660794,
            351.02016318118143,
            4,
            345,
            345,
            172.5,
            0.03490658503988659,
            0.8975979010256553,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            447.7797199491386,
            483.53728439368456,
            4,
            345,
            345,
            172.5,
            0.9325044860655419,
            1.7951958020513106,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            300.769296791575,
            511.7330048121494,
            4,
            345,
            345,
            172.5,
            1.8301023870911974,
            2.692793703076966,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            187.06549529187478,
            414.375371873592,
            4,
            345,
            345,
            172.5,
            2.7277002881168526,
            3.590391604102621,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            192.28959711417252,
            264.77666891453424,
            4,
            345,
            345,
            172.5,
            3.625298189142508,
            4.487989505128277,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            312.50774703402135,
            175.5877705205588,
            4,
            345,
            345,
            172.5,
            4.522896090168163,
            5.385587406153932,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            457.19322615842384,
            213.96973630429966,
            4,
            345,
            345,
            172.5,
            5.420493991193819,
            6.283185307179588,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747bf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;

exports[`HabitWheel Component renders a half-full circle with some successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#ffffff"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            517.394917660794,
            351.02016318118143,
            4,
            345,
            345,
            172.5,
            0.03490658503988659,
            0.8975979010256553,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5ebf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            447.7797199491386,
            483.53728439368456,
            4,
            345,
            345,
            172.5,
            0.9325044860655419,
            1.7951958020513106,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#ad372abf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            300.769296791575,
            511.7330048121494,
            4,
            345,
            345,
            172.5,
            1.8301023870911974,
            2.692793703076966,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5ebf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            187.06549529187478,
            414.375371873592,
            4,
            345,
            345,
            172.5,
            2.7277002881168526,
            3.590391604102621,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5ebf"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            192.28959711417252,
            264.77666891453424,
            4,
            345,
            345,
            172.5,
            3.625298189142508,
            4.487989505128277,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            312.50774703402135,
            175.5877705205588,
            4,
            345,
            345,
            172.5,
            4.522896090168163,
            5.385587406153932,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            457.19322615842384,
            213.96973630429966,
            4,
            345,
            345,
            172.5,
            5.420493991193819,
            6.283185307179588,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;

exports[`HabitWheel Component renders an empty circle with no successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#ffffff"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            517.394917660794,
            351.02016318118143,
            4,
            345,
            345,
            172.5,
            0.03490658503988659,
            0.8975979010256553,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            447.7797199491386,
            483.53728439368456,
            4,
            345,
            345,
            172.5,
            0.9325044860655419,
            1.7951958020513106,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            300.769296791575,
            511.7330048121494,
            4,
            345,
            345,
            172.5,
            1.8301023870911974,
            2.692793703076966,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            187.06549529187478,
            414.375371873592,
            4,
            345,
            345,
            172.5,
            2.7277002881168526,
            3.590391604102621,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            192.28959711417252,
            264.77666891453424,
            4,
            345,
            345,
            172.5,
            3.625298189142508,
            4.487989505128277,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            312.50774703402135,
            175.5877705205588,
            4,
            345,
            345,
            172.5,
            4.522896090168163,
            5.385587406153932,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            457.19322615842384,
            213.96973630429966,
            4,
            345,
            345,
            172.5,
            5.420493991193819,
            6.283185307179588,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;
